cluster/apps/homelab/stirling-pdf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf-internal
  namespace: stirling-pdf
spec:
  parentRefs:
    - name: homelab-gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "pdf.martinez-saweczko.es"
  rules:
    - backendRefs:
        - name: stirling-pdf
          port: 8080
